--- a/css/style.scss
+++ b/css/style.scss
@@ -1,54 +1,70 @@
 * {
-    box-sizing: border-box;
-    margin:0;
-
+  box-sizing: border-box;
+  margin: 0;
 }
 
 div#container {
-    width: 100vw;
-    height: 100vh;
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+  width: 100vw;
+  height: 100vh;
+    ///header start 
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: silver;
+    height:18%;
+    padding: 15px;
+    img {
+      height: 15vh;
+      width: auto;
+    }
+    h6 {
+      color: white;
+      font-style: italic;
+      font-size: 1.5em;
+      width: 20em;
+      opacity: 80%;
+    }
+  }
+  nav {
+    width: 100%;
+    height: 20%;
+    ul {
+      text-align: right;
+      padding-right: 3em;
+      font-size: 1.5em;
+      a {
+        color: white;
+        text-decoration: none;
+        margin-left: 1.5em;
+        border: 0.5 solid white;
+        padding: 8px 15px;
+        border: 1px solid #fff;
         background-color: black;
-        padding: 15px;
-        img {
-            height: 15vh;
-            width: auto;
-        }
-        h6{
-            color: white;
-            font-style: italic;
-            font-size: 1.5em;
-            width: auto;
-            opacity: 80%;
-            
-        }
-    }
+        /* Add border styling */
+        border-radius: 5px;
+        /* Optional: Add rounded corners */
+      }
 
-    nav {
-        width:100%;
-        height: 20%;
-        
-        ul {
-            text-align: right;
-            padding-right: 3em;
-           
-            font-size: 1.5em;
-        a {
-            color:white;
+      a:hover {
+        color: red;
+        background-color: white;
+        transition: 1s;
+      }
+    }
+  }
+  ////First header ends here 
+  div#under-nav {
+    width: 100vw;
+    height:2.5em;
+    background-color: white;
+    ul{
+        justify-content: space-between;
+        a{
             text-decoration: none;
-            margin-left: 1.5em;
-            border: .5 solid white;
-            padding: 8px 15px;
-            border: 1px solid #fff; /* Add border styling */
-            border-radius: 5px; /* Optional: Add rounded corners */
-        } a:hover {
-            color: red;
-            background-color: white;
-            transition: 1s;
-           }
+            color:black;
+            margin-left: 2rem;
+        }
     }
-    }
+  }
 }
